--- a/css/styles.css
+++ b/css/styles.css
@@ -28,24 +28,16 @@ a {
 	color: #212121;
 }
 
-.flex {
-	width: 100%;
-	height: 100%;
-	display: flex;
+.vertical-align {
+	transform: translateY(-50%);
 	position: relative;
-	align-items: center;
-	align-content: center;
-	justify-content: center;
+	top: 50%;
 }
 
-.flex-item-center {
-	align-self: center;
-}
-
-.flex-item-bottom {
-	bottom: 0;
-	right: 0;
+.bottom-box {
 	position: absolute;
+	bottom: 15px;
+	right: 15px;
 }
 
 .quote {
