paper in jpg and progressive added

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-	background-image: url(../img/paper.png);
+	background-image: url(../img/paper.jpg);
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font: 16px/1 "Tangerine";
