--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -47,24 +47,19 @@ html {
 
 body {
 	background-image: url(../img/paper.jpg);
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
 	font: 16px/1 "Tangerine";
 	color: #212121;
 	padding: 15px;
 	width: 100vw;
 	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 a {
 	text-decoration: none;
 	color: #212121;
-}
-
-.vertical-align {
-	transform: translateY(-50%);
-	position: relative;
-	top: 50%;
 }
 
 .bottom-box {
